Fix CSS styling of the HTML rendering broken since 2016
Some time ago there was a little bit of custom CSS applied to the HTML
table rendering. This is broken since patch I74214ea from 2016. This
patch renamed all CSS classes but forgot to update the PHP code
accordingly.

I decided to not change the HTML rendering because these class names
might already be used in custom per-wiki or per-user CSS. Instead I
partly revert I74214ea.

Unfortunately, some of the styles are quite dramatic, don't look good
or just don't work. I decided to remove some. The argument is that
the HTML rendering looks the same for 6 years now. I don't see a good
reason to change it now.

In detail:
* Suggested values are not aliases and should not be rendered in
  gray.
* The message "no description" is rendered in gray and italics. But
  this was applied to the wrong DOM element and made everything else
  gray and italic as well.
* The color #777 is not readable, violating WCAG rules. While it's ok
  to dim aliases and such, it must be at least #555 or darker.
* The "nowrap" destroys the table the moment one of the parameters
  does have a longer name or alias. Let the browser handle this, as
  it did for 6 years now.
* Same for rendering aliases as individual, indented blocks. This
  makes the table unnecessarily big when there are many aliases, and
  just doesn't look right. Again, let's stick to what we had for
  6 years.

--- a/modules/ext.templateData/templateData.css
+++ b/modules/ext.templateData/templateData.css
@@ -1,31 +1,24 @@
-.mw-templateData-doc-params tbody > tr > th {
+.mw-templatedata-doc-params tbody > tr > th {
 	text-align: left;
 	font-weight: normal;
 }
 
-.mw-templateData-doc-param-alias {
-	color: #777;
-	display: block;
-	margin-left: 1em;
+.mw-templatedata-doc-param-alias {
+	color: #555; /* required to pass WCAG AAA */
 }
 
-.mw-templateData-doc-muted {
+.mw-templatedata-doc-muted {
 	font-style: italic;
-	color: #777;
+	color: #555; /* required to pass WCAG AAA */
 }
 
 .mw-templatedata-doc-param-status-required {
 	font-weight: bold;
 }
 
-.mw-templateData-format {
+.mw-templatedata-format {
 	font-weight: normal;
 	font-size: 0.85em;
-}
-
-.mw-templateData-doc-param-name,
-.mw-templateData-doc-param-type {
-	white-space: nowrap;
 }
 
 .mw-templateData-maps-panel-button {
